--- a/springcloud-provider/src/main/resources/application.yml
+++ b/springcloud-provider/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://mse-679c2db0-p.eureka.mse.aliyuncs.com:8761/eureka
+      defaultZone: ${MSE_EUREKA_URL}
   instance:
     prefer-ip-address: true
     ip-address: ${KNATIVE_DOMAIN}
