--- a/basenifo/pom.xml
+++ b/basenifo/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.alibaba.knative</groupId>
-    <artifactId>data</artifactId>
-    <version>1.0</version>
+    <artifactId>basenifo</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
