--- a/portal-wap/pom.xml
+++ b/portal-wap/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.alibaba.knative</groupId>
-    <artifactId>portal-www</artifactId>
+    <artifactId>portal-wap</artifactId>
     <version>1.0</version>
 
     <properties>
